表格组件基本样式

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,8 @@
   #app{
     width: 960px;
     margin: 0 auto;
-    padding: 30px 0;
+    padding: 20px;
+    background-color: #FFF;
   }
   </style>
 </head>
